# Stock-Predicator

./: .dockerignore  .dvcignore  .editorconfig  .env.example  .env.vps.example  .gitignore  Directory.Build.props  Directory.Packages.props  Probora.slnx  README.md  docker-compose.vps.yml  docker-compose.yml
.dvc/: config
.github/: dependabot.yml
docs/: data-sources.md  legal-disclosure.tr.md  model-governance.md  us-equity-shadow.md  v3-one-month-plan.md  (+2 more)
ml/: pyproject.toml
ml/src/probora_ml/: __init__.py  cli.py  config.py  hardware.py
ml/src/probora_ml/evaluation/: ablation.py  calibration_ablation.py  conditional_prior_ablation.py  direction_model_ablation.py  fred_macro_ablation.py  interval_calibration_ablation.py  label_ablation.py  linear_direction_ablation.py  metrics.py  regime_analysis.py  splits.py  tree_regularization_ablation.py
ml/src/probora_ml/features/: daily.py  derivatives.py  equity.py
ml/src/probora_ml/ingestion/: binance_archive.py  binance_futures_archive.py  fred_market.py  shadow_bootstrap.py
ml/src/probora_ml/training/: calibration.py  labels.py  pipeline.py
ml/tests/: test_ablation.py  test_asset_universe.py  test_calibration.py  test_conditional_prior_ablation.py  test_direction_model_ablation.py  test_equity_features.py  test_feature_parity.py  test_fred_market.py  test_futures_ingestion.py  test_ingestion.py  test_interval_calibration_ablation.py  test_label_ablation.py  test_labels_and_splits.py  test_linear_direction_ablation.py  test_metrics.py  test_onnx_contract.py  test_tree_regularization_ablation.py
(+139 files in other folders)
